jumpy fixes

--- a/assets/custom/css/teleprompter.css
+++ b/assets/custom/css/teleprompter.css
@@ -116,6 +116,7 @@ body {
 
 #promptcontainer {
 	overflow: hidden;
+	margin-top: 0;
 	top: 0px;
 	left: 0px;
 	width: 100%;
